<resources>
    <string name="app_name">StoryApp</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">StoryApp publikasi kenangan anda!</string>
    <string name="title_welcome_page">Selamat datang di StoryApp!</string>
    <string name="title_signup_page">Lengkapi data dirimu di bawah ini ya</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Sudah siap untuk mengabongkan karyamu?</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat datang.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>

    <string name="camera_x">CameraX</string>
    <string name="camera">Kamera</string>
    <string name="gallery">Galeri</string>
    <string name="upload">Unggah</string>
    <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
    <string name="add_story">ADD</string>
    <string name="upload_description">Description</string>
    <string name="error_field_password">Password tidak boleh kurang dari 8 karakter</string>
    <string name="error_email">Email tidak boleh kosong!</string>
    <string name="title_activity_maps">MapsActivity</string>

    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="custom_type">Custom</string>
    <string name="coba_lagi">Coba Lagi</string>
</resources>